--- a/index.html
+++ b/index.html
@@ -182,6 +182,16 @@
     }
   </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17425280749">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17425280749');
+</script>
 <body>
   <div id="captchaOverlay">
     <div class="container">
@@ -225,3 +235,4 @@
   </script>
 </body>
 </html>
+
